tests/baselines/reference/typesWithPublicConstructor.errors.txt
tests/cases/conformance/types/members/typesWithPublicConstructor.ts(8,5): error TS2322: Type 'Function' is not assignable to type '() => void'.
  Type 'Function' provides no match for the signature '(): void'.
tests/cases/conformance/types/members/typesWithPublicConstructor.ts(15,10): error TS2554: Expected 1 arguments, but got 0.
tests/cases/conformance/types/members/typesWithPublicConstructor.ts(16,5): error TS2322: Type 'Function' is not assignable to type '(x: number) => void'.
  Type 'Function' provides no match for the signature '(x: number): void'.


==== tests/cases/conformance/types/members/typesWithPublicConstructor.ts (3 errors) ====
    // public is allowed on a constructor but is not meaningful
    
    class C {
        public constructor() { }
    }
    
    var c = new C();
    var r: () => void = c.constructor;
        ~
!!! error TS2322: Type 'Function' is not assignable to type '() => void'.
!!! error TS2322:   Type 'Function' provides no match for the signature '(): void'.
    
    class C2 {
        public constructor(x: number);
        public constructor(x: any) { }
    }
    
    var c2 = new C2();
             ~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 tests/cases/conformance/types/members/typesWithPublicConstructor.ts:11:24: An argument for 'x' was not provided.
    var r2: (x: number) => void = c2.constructor;
        ~~
!!! error TS2322: Type 'Function' is not assignable to type '(x: number) => void'.
!!! error TS2322:   Type 'Function' provides no match for the signature '(x: number): void'.